refactor: Refactor code to improve readability and error handling
- Use the `anyhow` crate to improve error handling and provide clearer error context.
- Extract `read_directory` and `determine_content_type` into helper functions to reduce code duplication.
- Optimize logging by using `{:#}` to format error messages for complete context.
- Improve path handling logic to ensure correct relative path calculation.
- Use `with_context` to add more context to asynchronous operations.
- Adjust Release build parameters to optimize binary size.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,11 @@ axum = { version = "0.8.1" }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.2", features = ["trace"] }
+
+[profile.release]
+lto = true          # Link Time Optimization
+opt-level = "z"     # Optimize for size
+codegen-units = 1   # Single-threaded compilation
+debug = false       # No debug info
+panic = "abort"     # Abort on panic
+strip = true        # Strip symbols
