--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "share_these"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["n-WN"]
 description = "A simple file sharing web server"
@@ -18,6 +18,12 @@ axum = { version = "0.8.1" }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.2", features = ["trace"] }
+tokio-util = { version = "0.7.14", features = ["io"] }
+# futures = "0.3.31"
+# bytes = "1.10.1"
+chrono = "0.4"
+# 命令行参数解析
+clap = { version = "4.5", features = ["derive"] }
 
 [profile.release]
 lto = true          # Link Time Optimization
