--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,15 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.2", features = ["trace"] }
 tokio-util = { version = "0.7.14", features = ["io"] }
-# futures = "0.3.31"
-# bytes = "1.10.1"
 chrono = "0.4"
 # 命令行参数解析
 clap = { version = "4.5", features = ["derive"] }
+# 请求并发限制
+tower = { version = "0.5.2", features = ["limit"] }
+# 文件缓存
+moka = { version = "0.12.10", features = ["future"] }
+# 添加可选的压缩支持
+# tower-http-additional = { package = "tower-http", version = "0.6.2", features = ["compression-br", "compression-gzip", "compression-deflate"] }
 
 [profile.release]
 lto = true          # Link Time Optimization
